yamls/certificate-service/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowise
spec:
  selector:
    app: flowise
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
