yamls/certificate-service/managed-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
spec:
  rules:
    - host: "flowise.aiinkwell.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flowise
                port:
                  number: 80
